WebCore/css/CSSStyleSelector.h
@@ -64,6 +64,7 @@ class StyleImage;
 class StyleSheet;
 class StyleSheetList;
 class StyledElement;
+class WebKitCSSKeyframeRule;
 class WebKitCSSKeyframesRule;
 
 class MediaQueryResult : public Noncopyable {
@@ -110,6 +111,8 @@ public:
         bool canShareStyleWithElement(Node*);
 
         RenderStyle* style() const { return m_style.get(); }
+
+        PassRefPtr<RenderStyle> styleForKeyframe(const RenderStyle*, const WebKitCSSKeyframeRule*, KeyframeList&);
 
     public:
         // These methods will give back the set of rules that matched for a given element (or a pseudo-element).
